--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    max-width: 960px;
+    max-width: 640px;
     margin: auto;
     padding: 24px 24px 96px 24px;
     background-color: #ffcccc;
@@ -13,7 +13,6 @@ h1 {
 }
 h2, h3 {
     font-size: 1rem;
-    text-align: center;
 }
 p {
     line-height: 1.5;
@@ -23,7 +22,7 @@ header {
     padding-top: 16px;
 }
 .feature {
-    margin: 32px 0;
+    margin: 2rem auto;
     text-align: center;
 }
 #video {
@@ -48,7 +47,7 @@ input, textarea {
     width: 100%;
     border-radius: 0px;
     margin-bottom: 1rem;
-    border: none;
+    border: 2px solid #000;
     padding: 0.5rem;
     font-size: 0.8rem;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
@@ -88,6 +87,7 @@ textarea {
     width: 100%;
     background-color: #D4D8FE;
     text-align: center;
+    border-top: 2px solid #000;
 }
 .mc-field-group, #mc_embed_signup .clear {
     display: inline-block;
@@ -111,7 +111,7 @@ textarea {
         width: 66%;
     }
     .feature-portrait {
-        width: 50%;
+        width: 66%;
     }
     .flex {
         display:flex;
@@ -141,12 +141,12 @@ textarea {
 }
 .button-primary {
     display:inline-block;
-    background-color:#f6fb1d;
+    background-color:#F5FA1F;
     font-weight: bold;
     cursor:pointer;
-    border-radius: 0px;
-    margin: 2rem 0;
-    border: none;
+    border-radius: 0;
+    margin: 1rem 0;
+    border: 2px solid #000;
     padding: 1rem 2rem;
     font-size: 1rem;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
