--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,5 @@
 body {
-    max-width: 640px;
-    margin: auto;
-    padding: 24px 24px 96px 24px;
+    margin: 0;
     background-color: #ffcccc;
     font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
@@ -21,9 +19,31 @@ header {
     text-align: center;
     padding-top: 16px;
 }
+footer {
+    padding-bottom: 96px;
+}
+.container {
+    max-width: 640px;
+    margin: auto;
+    padding: 24px;
+}
+.hero {
+    background-color: #D4D7FF;
+    background-image: url("../img/gluestick-45.png");
+    background-size: 64px;
+    -webkit-animation: slide 6s linear infinite;
+    border-bottom: 2px solid #000;
+}
+@-webkit-keyframes slide {
+    from { background-position: 0 0; }
+    to { background-position: -64px 0; }
+}
 .feature {
     margin: 2rem auto;
     text-align: center;
+}
+.feature img {
+    border: 2px solid #000;
 }
 #video {
     position: relative;
@@ -56,6 +76,7 @@ input, textarea {
 }
 textarea {
     height: 96px;
+    resize: none;
 }
 #submit, #mc-embedded-subscribe {
     background-color:#f6fb1d;
@@ -85,7 +106,7 @@ textarea {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #D4D8FE;
+    background-color: #CCFFD6;
     text-align: center;
     border-top: 2px solid #000;
 }
